--- a/index.html
+++ b/index.html
@@ -39,11 +39,23 @@
             </div>
         </div>
 
+        <div class="menu-header">
+            <div class="container">
+                <a class="menu-header__logo" href="./index.html"><img src="./images/loco.svg" alt=""></a>
+                <div class="menu-header__contact">
+                    <button><img src="./images/png/tel-phone.png" alt=""></button>
+                    <button><img src="./images/png/gay-map.png" alt="">Ташкент</button>
+                </div>
+            </div>
+        </div>
+
         <div class="header-bottom">
             <div class="container">
                 <div class="logo">
                     <img src="./images/loco.svg" alt="">
                 </div>
+
+                <button class="header-bottom__menu-btn"><img src="./images/Menu (2).svg" alt=""></button>
 
                 <div class="header-bottom__search">
                     <div class="header-search-wrapper">
@@ -59,7 +71,7 @@
                     </div>
 
                     <div class="header-bottom__search__btn">
-                        <button><img src="./images/search.svg" alt="">Поиск</button>
+                        <button><img src="./images/search.svg" alt=""><h4 class="search-btn-text">Поиск</h4></button>
                     </div>
                 </div>
 
@@ -80,6 +92,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="menu-hero">
+            <a class="menu-hero__img" href="#"><img src="./images/jpg/menu-swiper-img.jpg" alt=""></a>
         </div>
 
         <div class="header-category">
