--- a/index.html
+++ b/index.html
@@ -751,5 +751,57 @@
             </div>
         </div>
     </div>
+
+    <div class="popular">
+        <div class="container">
+            <h1 class="popular__title">Популярные категории</h1>
+
+            <div class="popular__cards-wrapper">
+                <div class="popular__cards-wrapper__card">
+                    <h1 class="popular__cards-wrapper__card__title">Компьютеры</h1>
+                    <img src="./images/png/popular-card-img.png" alt="">
+                </div>
+
+                <div class="popular__cards-wrapper__card">
+                    <h1 class="popular__cards-wrapper__card__title">Телефоны,
+                        планшеты</h1>
+                    <img src="./images/png/popular-img-2.png" alt="">
+                </div>
+
+                <div class="popular__cards-wrapper__card">
+                    <h1 class="popular__cards-wrapper__card__title">Ноутбуки</h1>
+                    <img src="./images/png/popular-card-img-3.png" alt="">
+                </div>
+
+                <div class="popular__cards-wrapper__card">
+                    <h1 class="popular__cards-wrapper__card__title">Товары для офиса</h1>
+                    <img src="./images/png/popular-card-img-4.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="sale">
+        <div class="container">
+            <div class="sale__wrapper">
+                <div class="sale__text-wrapper">
+                    <h1>Apple iPhone X 64 ГБ</h1>
+                    <p>
+                        Совершенно новый дисплей Super Retina с диагональю 5,8 дюйма, который удобно лежит в руке и потрясающие выглядит, — это и есть iPhone X.
+                    </p>
+                </div>
+    
+                <div class="sale__img">
+                    <img src="./images/png/iphone-x-img.png" alt="">
+                </div>
+    
+                <div class="sale__price">
+                    <span class="sal-after">1 250 900 Сум</span>
+                    <span class="sal-before">2 220  900 Сум</span>
+                    <a href="#" class="sal-btn">Показать еще</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
