--- a/index.html
+++ b/index.html
@@ -1845,5 +1845,174 @@
             </div>
         </div>
     </div>
+
+    <div class="footer">
+        <div class="container">
+            <div class="footer__left">
+                <div class="footer__logo">
+                    <a href="./index.html"><img src="./images/footer-logo.svg" alt=""></a>
+                </div>
+                <div class="col-center">
+                    <p>
+                        График работы колл-центра
+                        Понедельник - Суббота: 9:00–18:00
+                    </p>
+                </div>
+                <div class="col-center-number">
+                    <p>
+                        Колл-центр:
+                       <span> + 998 (71) 205-93-93</span>
+                    </p>
+                </div>
+
+                <div class="footer__icons men-none">
+                    <a href="#" class="footer__icons__icon">
+                        <svg width="14" height="14" viewBox="0 0 14 14" fill="red" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_11761_4772)">
+                            <path d="M5.27723 8.42284L5.05924 11.4945C5.37113 11.4945 5.50621 11.3603 5.6682 11.1991L7.13047 9.79917L10.1604 12.0221C10.7161 12.3323 11.1076 12.169 11.2576 11.5099L13.2464 2.17381L13.247 2.17326C13.4232 1.35033 12.9499 1.02852 12.4085 1.23041L0.718003 5.7142C-0.0798483 6.02445 -0.0677679 6.47002 0.582374 6.6719L3.57116 7.60321L10.5135 3.25144C10.8402 3.0347 11.1373 3.15462 10.8929 3.37136L5.27723 8.42284Z" fill="#8F8E94"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_11761_4772">
+                            <rect width="13.1786" height="13.2022" fill="#8F8E94" transform="translate(0.106201 0.0717773)"/>
+                            </clipPath>
+                            </defs>
+                            </svg>
+                    </a>
+
+                    <a href="#" class="footer__icons__icon">
+                        <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_11761_4776)">
+                            <path d="M9.5461 0.0717773H4.60414C2.33001 0.0717773 0.48584 1.88396 0.48584 4.11864V8.97486C0.48584 11.2095 2.33001 13.0217 4.60414 13.0217H9.5461C11.8202 13.0217 13.6644 11.2095 13.6644 8.97486V4.11864C13.6644 1.88396 11.8202 0.0717773 9.5461 0.0717773ZM12.4289 8.97486C12.4289 10.537 11.1358 11.8077 9.5461 11.8077H4.60414C3.01447 11.8077 1.72133 10.537 1.72133 8.97486V4.11864C1.72133 2.55655 3.01447 1.28583 4.60414 1.28583H9.5461C11.1358 1.28583 12.4289 2.55655 12.4289 4.11864V8.97486Z" fill="#8F8E94"/>
+                            <path d="M7.07491 3.30908C5.25545 3.30908 3.78027 4.75867 3.78027 6.54657C3.78027 8.33447 5.25545 9.78406 7.07491 9.78406C8.89438 9.78406 10.3696 8.33447 10.3696 6.54657C10.3696 4.75867 8.89438 3.30908 7.07491 3.30908ZM7.07491 8.57C5.93991 8.57 5.01576 7.66188 5.01576 6.54657C5.01576 5.43045 5.93991 4.52314 7.07491 4.52314C8.20991 4.52314 9.13406 5.43045 9.13406 6.54657C9.13406 7.66188 8.20991 8.57 7.07491 8.57Z" fill="#8F8E94"/>
+                            <path d="M10.6167 3.49804C10.8592 3.49804 11.0558 3.3049 11.0558 3.06665C11.0558 2.8284 10.8592 2.63525 10.6167 2.63525C10.3743 2.63525 10.1777 2.8284 10.1777 3.06665C10.1777 3.3049 10.3743 3.49804 10.6167 3.49804Z" fill="#8F8E94"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_11761_4776">
+                            <rect width="13.1786" height="12.9499" fill="white" transform="translate(0.48584 0.0717773)"/>
+                            </clipPath>
+                            </defs>
+                            </svg>
+                    </a>
+
+                    <a href="#" class="footer__icons__icon">
+                        <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_11761_4791)">
+                            <path d="M10.3134 0.0745243L8.60446 0.0717773C6.68452 0.0717773 5.44377 1.34704 5.44377 3.32085V4.81889H3.7255C3.57702 4.81889 3.45679 4.93948 3.45679 5.08823V7.25872C3.45679 7.40746 3.57716 7.52791 3.7255 7.52791H5.44377V13.0047C5.44377 13.1535 5.56401 13.2739 5.71249 13.2739H7.95434C8.10282 13.2739 8.22305 13.1534 8.22305 13.0047V7.52791H10.2321C10.3806 7.52791 10.5008 7.40746 10.5008 7.25872L10.5016 5.08823C10.5016 5.01681 10.4733 4.94841 10.423 4.89786C10.3726 4.84732 10.3041 4.81889 10.2328 4.81889H8.22305V3.54898C8.22305 2.93861 8.36824 2.62876 9.16191 2.62876L10.3131 2.62835C10.4615 2.62835 10.5817 2.50776 10.5817 2.35915V0.343724C10.5817 0.195252 10.4616 0.074799 10.3134 0.0745243Z" fill="#8F8E94"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_11761_4791">
+                            <rect width="13.1786" height="13.2022" fill="white" transform="translate(0.429932 0.0717773)"/>
+                            </clipPath>
+                            </defs>
+                            </svg>
+                    </a>
+
+                    <a href="#" class="footer__icons__icon">
+                        <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_11761_4788)">
+                            <path d="M13.1357 3.48707C12.9943 2.97069 12.58 2.56363 12.0546 2.42458C11.0947 2.1665 7.2551 2.1665 7.2551 2.1665C7.2551 2.1665 3.41565 2.1665 2.45577 2.4148C1.94045 2.5537 1.51603 2.97076 1.37467 3.48707C1.12207 4.43023 1.12207 6.38621 1.12207 6.38621C1.12207 6.38621 1.12207 8.35205 1.37467 9.28535C1.51617 9.80166 1.93034 10.2087 2.45584 10.3478C3.42576 10.6059 7.25525 10.6059 7.25525 10.6059C7.25525 10.6059 11.0947 10.6059 12.0546 10.3576C12.5801 10.2186 12.9943 9.81159 13.1358 9.29528C13.3883 8.35205 13.3883 6.39614 13.3883 6.39614C13.3883 6.39614 13.3985 4.43023 13.1357 3.48707ZM6.03265 8.19321V4.5792L9.22547 6.38621L6.03265 8.19321Z" fill="#8F8E94"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_11761_4788">
+                            <rect width="13.0841" height="12.8571" fill="white" transform="translate(0.719727 0.0712891)"/>
+                            </clipPath>
+                            </defs>
+                            </svg>
+                    </a>
+                </div>
+            </div>
+
+            <div class="footer__categor">
+                <div class="footer__categor__list">
+                    <h1>Категории</h1>
+                    <ul>
+                        <li><a href="#">Ноутбуки</a></li>
+                        <li><a href="#">Игровые кресла</a></li>
+                        <li><a href="#">Телефоны</a></li>
+                        <li><a href="#">Моноблоки</a></li>
+                        <li><a href="#">Модули памяти</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer__categor__list">
+                    <h1>Общее</h1>
+                    <ul>
+                        <li><a href="#">Ноутбуки</a></li>
+                        <li><a href="#">Игровые кресла</a></li>
+                        <li><a href="#">Телефоны</a></li>
+                        <li><a href="#">Моноблоки</a></li>
+                        <li><a href="#">Модули памяти</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer__categor__list">
+                    <h1>Покупателям</h1>
+                    <ul>
+                        <li><a href="#">Ноутбуки</a></li>
+                        <li><a href="#">Игровые кресла</a></li>
+                        <li><a href="#">Телефоны</a></li>
+                        <li><a href="#">Моноблоки</a></li>
+                        <li><a href="#">Модули памяти</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="footer__icons menu-icons">
+                <a href="#" class="footer__icons__icon">
+                    <svg width="14" height="14" viewBox="0 0 14 14" fill="red" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_11761_4772)">
+                        <path d="M5.27723 8.42284L5.05924 11.4945C5.37113 11.4945 5.50621 11.3603 5.6682 11.1991L7.13047 9.79917L10.1604 12.0221C10.7161 12.3323 11.1076 12.169 11.2576 11.5099L13.2464 2.17381L13.247 2.17326C13.4232 1.35033 12.9499 1.02852 12.4085 1.23041L0.718003 5.7142C-0.0798483 6.02445 -0.0677679 6.47002 0.582374 6.6719L3.57116 7.60321L10.5135 3.25144C10.8402 3.0347 11.1373 3.15462 10.8929 3.37136L5.27723 8.42284Z" fill="#8F8E94"/>
+                        </g>
+                        <defs>
+                        <clipPath id="clip0_11761_4772">
+                        <rect width="13.1786" height="13.2022" fill="#8F8E94" transform="translate(0.106201 0.0717773)"/>
+                        </clipPath>
+                        </defs>
+                        </svg>
+                </a>
+
+                <a href="#" class="footer__icons__icon">
+                    <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_11761_4776)">
+                        <path d="M9.5461 0.0717773H4.60414C2.33001 0.0717773 0.48584 1.88396 0.48584 4.11864V8.97486C0.48584 11.2095 2.33001 13.0217 4.60414 13.0217H9.5461C11.8202 13.0217 13.6644 11.2095 13.6644 8.97486V4.11864C13.6644 1.88396 11.8202 0.0717773 9.5461 0.0717773ZM12.4289 8.97486C12.4289 10.537 11.1358 11.8077 9.5461 11.8077H4.60414C3.01447 11.8077 1.72133 10.537 1.72133 8.97486V4.11864C1.72133 2.55655 3.01447 1.28583 4.60414 1.28583H9.5461C11.1358 1.28583 12.4289 2.55655 12.4289 4.11864V8.97486Z" fill="#8F8E94"/>
+                        <path d="M7.07491 3.30908C5.25545 3.30908 3.78027 4.75867 3.78027 6.54657C3.78027 8.33447 5.25545 9.78406 7.07491 9.78406C8.89438 9.78406 10.3696 8.33447 10.3696 6.54657C10.3696 4.75867 8.89438 3.30908 7.07491 3.30908ZM7.07491 8.57C5.93991 8.57 5.01576 7.66188 5.01576 6.54657C5.01576 5.43045 5.93991 4.52314 7.07491 4.52314C8.20991 4.52314 9.13406 5.43045 9.13406 6.54657C9.13406 7.66188 8.20991 8.57 7.07491 8.57Z" fill="#8F8E94"/>
+                        <path d="M10.6167 3.49804C10.8592 3.49804 11.0558 3.3049 11.0558 3.06665C11.0558 2.8284 10.8592 2.63525 10.6167 2.63525C10.3743 2.63525 10.1777 2.8284 10.1777 3.06665C10.1777 3.3049 10.3743 3.49804 10.6167 3.49804Z" fill="#8F8E94"/>
+                        </g>
+                        <defs>
+                        <clipPath id="clip0_11761_4776">
+                        <rect width="13.1786" height="12.9499" fill="white" transform="translate(0.48584 0.0717773)"/>
+                        </clipPath>
+                        </defs>
+                        </svg>
+                </a>
+
+                <a href="#" class="footer__icons__icon">
+                    <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_11761_4791)">
+                        <path d="M10.3134 0.0745243L8.60446 0.0717773C6.68452 0.0717773 5.44377 1.34704 5.44377 3.32085V4.81889H3.7255C3.57702 4.81889 3.45679 4.93948 3.45679 5.08823V7.25872C3.45679 7.40746 3.57716 7.52791 3.7255 7.52791H5.44377V13.0047C5.44377 13.1535 5.56401 13.2739 5.71249 13.2739H7.95434C8.10282 13.2739 8.22305 13.1534 8.22305 13.0047V7.52791H10.2321C10.3806 7.52791 10.5008 7.40746 10.5008 7.25872L10.5016 5.08823C10.5016 5.01681 10.4733 4.94841 10.423 4.89786C10.3726 4.84732 10.3041 4.81889 10.2328 4.81889H8.22305V3.54898C8.22305 2.93861 8.36824 2.62876 9.16191 2.62876L10.3131 2.62835C10.4615 2.62835 10.5817 2.50776 10.5817 2.35915V0.343724C10.5817 0.195252 10.4616 0.074799 10.3134 0.0745243Z" fill="#8F8E94"/>
+                        </g>
+                        <defs>
+                        <clipPath id="clip0_11761_4791">
+                        <rect width="13.1786" height="13.2022" fill="white" transform="translate(0.429932 0.0717773)"/>
+                        </clipPath>
+                        </defs>
+                        </svg>
+                </a>
+
+                <a href="#" class="footer__icons__icon">
+                    <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_11761_4788)">
+                        <path d="M13.1357 3.48707C12.9943 2.97069 12.58 2.56363 12.0546 2.42458C11.0947 2.1665 7.2551 2.1665 7.2551 2.1665C7.2551 2.1665 3.41565 2.1665 2.45577 2.4148C1.94045 2.5537 1.51603 2.97076 1.37467 3.48707C1.12207 4.43023 1.12207 6.38621 1.12207 6.38621C1.12207 6.38621 1.12207 8.35205 1.37467 9.28535C1.51617 9.80166 1.93034 10.2087 2.45584 10.3478C3.42576 10.6059 7.25525 10.6059 7.25525 10.6059C7.25525 10.6059 11.0947 10.6059 12.0546 10.3576C12.5801 10.2186 12.9943 9.81159 13.1358 9.29528C13.3883 8.35205 13.3883 6.39614 13.3883 6.39614C13.3883 6.39614 13.3985 4.43023 13.1357 3.48707ZM6.03265 8.19321V4.5792L9.22547 6.38621L6.03265 8.19321Z" fill="#8F8E94"/>
+                        </g>
+                        <defs>
+                        <clipPath id="clip0_11761_4788">
+                        <rect width="13.0841" height="12.8571" fill="white" transform="translate(0.719727 0.0712891)"/>
+                        </clipPath>
+                        </defs>
+                        </svg>
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
