--- a/index.html
+++ b/index.html
@@ -2219,9 +2219,9 @@
             menuOverlay.style.display = 'block'
         })
 
-        menuClose.addEventListener('click', ()=> {
-            closeMenu()
-        })
+        menuClose.addEventListener('click', ()=> closeMenu())
+
+        menuOverlay.addEventListener('click', ()=> closeMenu())
     </script>
 </body>
 </html>
