--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
         <div class="menu">
             <div class="menu__header">
-                <a href="#"><img src="./images/menu-logo.svg" alt=""></a>
+                <a href="#"><img src="./images/logo-menu.svg" alt=""></a>
                 <button><img src="./images/x.svg" alt="" id="menu-close"></button>
             </div>
 
