--- a/filter.html
+++ b/filter.html
@@ -328,25 +328,25 @@
                         <button><img src="./images/png/top-arrow.png" alt=""></button>
                     </div>
                     <div class="botter-width">
-                        <div class="botter-width__item">
-                            <input type="checkbox">
+                        <label class="botter-width__item">
+                            <input type="checkbox" name="check">
                             <h2>1821 мА⋅ч</h2>
-                        </div>
+                        </label>
 
-                        <div class="botter-width__item">
+                        <label class="botter-width__item">
                             <input type="checkbox">
                             <h2>3000 мА⋅ч</h2>
-                        </div>
+                        </label>
 
-                        <div class="botter-width__item">
+                        <label class="botter-width__item">
                             <input type="checkbox">
                             <h2>4500 мА⋅ч</h2>
-                        </div>
+                        </label>
 
-                        <div class="botter-width__item">
+                        <label class="botter-width__item">
                             <input type="checkbox">
                             <h2>5000 мА⋅ч</h2>
-                        </div>
+                        </label>
                     </div>
                 </div>
             </div>
