--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <nav class="header-top__list">
                     <ul>
                         <li><a href="#">Наши магазины</a></li>
-                        <li><a href="#">B2B продажи</a></li>
-                        <li><a href="#">Покупка в рассрочку</a></li>
+                        <li><a target="_blank" href="./buy.html">B2B продажи</a></li>
+                        <li><a href="./cabinet.html">Покупка в рассрочку</a></li>
                         <li><a href="#">Способы оплаты</a></li>
                         <li><a href="#">Гарантия на товары</a></li>
                     </ul>
@@ -295,14 +295,24 @@
             </div>
 
             <div class="menu__info">
-                <a>Доставка</a>
-                <a>обработка заказов</a>
+                <a href="#">Доставка</a>
+                <a href="#">обработка заказов</a>
             </div>
 
             <div class="menu__lang">
                 <button>Uzb</button>
                 <button>Рус</button>
                 <button>Eng</button>
+            </div>
+        </div>
+
+        <div class="menu-bottom">
+            <div class="container">
+                <button><img src="./images/menu-menu.svg" alt=""></button>
+                <button><img src="./images/menu-bottom-cart.svg" alt=""></button>
+                <button><img src="./images/bottom-menu-home.svg" alt=""></button>
+                <button><img src="./images/menu-bottom-exit.svg" alt=""></button>
+                <button><img src="./images/8542029_heart_love_like_icon.svg" alt=""></button>
             </div>
         </div>
     </header>
